--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="images/anan.png" alt="Anan Profile pic" height="200px" width="200px"></td>
+      <td><img src="anan.png" alt="Anan Profile pic" height="200px" width="200px"></td>
       <td><h1>Anan Alvi</h1>
       <p><em><a href="faxwoid.com">Front end</a> and <a href="faxwoid.com">CMS Developer</a> at <strong><a href="Faxwoid.com">FAXWOID</a></strong></em>.</p>
       <p>As i told you above.I am a developer at <a href="faxwoid.com">FAXWOID Sotware House</a> which is locted near <a href="https://www.umt.edu.pk/">University of Management and Technology, Lahore</a>.I love my workplace.</p></td>
